RESOLVED FIXED132810
REGRESSION(r168603): [GTK] Build broken.
https://bugs.webkit.org/show_bug.cgi?id=132810
Summary REGRESSION(r168603): [GTK] Build broken.
Seongjun Kim
Reported 2014-05-11 20:24:32 PDT
Revision r168118 <http://trac.webkit.org/changeset/168603> broke the GTK Build: ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.cpp: In function 'void* createDefaultWebContext(gpointer)': ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.cpp:256:98: error: no matching function for call to 'WebKit::WebContext::create(WTF::String)' ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.cpp:256:98: note: candidate is: In file included from ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebContextPrivate.h:30:0, from ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.cpp:42: ../../Source/WebKit2/UIProcess/WebContext.h:110:35: note: static WTF::PassRefPtr<WebKit::WebContext> WebKit::WebContext::create(WebKit::WebContextConfiguration) ../../Source/WebKit2/UIProcess/WebContext.h:110:35: note: no known conversion for argument 1 from 'WTF::String' to 'WebKit::WebContextConfiguration'
Attachments
Patch (1.92 KB, patch)
2014-05-11 20:39 PDT, Seongjun Kim
no flags
Seongjun Kim
Comment 1 2014-05-11 20:39:27 PDT
WebKit Commit Bot
Comment 2 2014-05-11 20:42:03 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2014-05-11 22:51:48 PDT
Comment on attachment 231273 [details] Patch Thanks!
WebKit Commit Bot
Comment 4 2014-05-11 23:22:16 PDT
Comment on attachment 231273 [details] Patch Clearing flags on attachment: 231273 Committed r168608: <http://trac.webkit.org/changeset/168608>
WebKit Commit Bot
Comment 5 2014-05-11 23:22:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.