REGRESSION(r168603): [GTK] Build broken. https://bugs.webkit.org/show_bug.cgi?id=132810

Patch by Seongjun Kim <isAir@company100.com> on 2014-05-11
Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/WebKitWebContext.cpp:
(createDefaultWebContext):
Construct a WebContextConfiguration object and pass it to WebContext::create.

Canonical link: https://commits.webkit.org/150852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168608 268f45cc-cd09-0410-ab3c-d52691b4dbfc